# fax

./: .gitignore  README.md  config.toml  defaults.toml  example.py  help.toml  paths.toml  pyproject.toml  ruff.toml  train.py
experiments/: fax1k.slurm  s3-fax1k.slurm  scratch.slurm  single.slurm
fax/: __init__.py  calculate_stats.py  config.py  constants.py  database.py  dataloader.py  emulator_helper.py  eval_helper.py  example.py  gamestate_utils.py  main.py  model.py  paths.py  process_replays.py  schema.py  slp_reader.py  slp_to_mds.py  stats.py  target_config.py  train.py  transformations.py  utils.py  writer.py
fax/data_prep/: database.py  peppi_schema.py
fax/dataprep/: __init__.py  database.py  exploration.ipynb  index_slp.py  slp_reader.py  slp_to_mds.py  stats.py
fax/eval/: __init__.py  eval.ipynb  eval.py  eval_helper.py  my_eval.py  parse_eval.py  run_eval.py
fax/processing/: __init__.py  configs.py  preprocessor.py  t2.py  transformations.py
fax/training/: __init__.py  dataloader.py  train.py
fax/utils/: __init__.py  emulator_helper.py  gamestate_utils.py
notebooks/: one.ipynb
src/: notebook.ipynb
src/fax/: __init__.py  constants.py  emulator_helper.py  eval_helper.py  gamestate_utils.py  main.py  model.py  paths.py  schema.py  train.py  utils.py
src/fax/agents/: models.py
src/fax/env/: melee_env.py
