[project]
name = "fax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "91252200+Josef-Hlink@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.3.0",
    "gymnasium>=1.1.1",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "melee",
    "mosaicml-streaming>=0.13.0",
    "numpy<2.0",
    "peppi-py>=0.8.0",
    "psutil>=7.0.0",
    "ruff>=0.11.8",
    "scipy>=1.16.1",
    "tensordict>=0.8.2",
    "torch>=2.0.1",
    "wandb>=0.19.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
melee = { git = "https://github.com/vladfi1/libmelee.git", rev = "dev" }
